Rename close hook as terminate hook
It has been decided that terminate had a better explanatory intent.
