# internal/appmgrcli/disruption/terminate_disruption_responses.go
@@ -1,0 +1,172 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package disruption
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"encoding/json"
+	stderrors "errors"
+	"fmt"
+	"io"
+
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/criteo/node-disruption-controller/internal/appmgr"
+)
+
+// TerminateDisruptionReader is a Reader for the TerminateDisruption structure.
+type TerminateDisruptionReader struct {
+	formats strfmt.Registry
+}
+
+// ReadResponse reads a server response into the received o.
+func (o *TerminateDisruptionReader) ReadResponse(response runtime.ClientResponse, consumer runtime.Consumer) (any, error) {
+	switch response.Code() {
+	case 200:
+		result := NewTerminateDisruptionOK()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return result, nil
+	default:
+		result := NewTerminateDisruptionDefault(response.Code())
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		if response.Code()/100 == 2 {
+			return result, nil
+		}
+		return nil, result
+	}
+}
+
+// NewTerminateDisruptionOK creates a TerminateDisruptionOK with default headers values
+func NewTerminateDisruptionOK() *TerminateDisruptionOK {
+	return &TerminateDisruptionOK{}
+}
+
+/*
+TerminateDisruptionOK describes a response with status code 200, with default header values.
+
+Acknowledged.
+*/
+type TerminateDisruptionOK struct {
+}
+
+// IsSuccess returns true when this terminate disruption o k response has a 2xx status code
+func (o *TerminateDisruptionOK) IsSuccess() bool {
+	return true
+}
+
+// IsRedirect returns true when this terminate disruption o k response has a 3xx status code
+func (o *TerminateDisruptionOK) IsRedirect() bool {
+	return false
+}
+
+// IsClientError returns true when this terminate disruption o k response has a 4xx status code
+func (o *TerminateDisruptionOK) IsClientError() bool {
+	return false
+}
+
+// IsServerError returns true when this terminate disruption o k response has a 5xx status code
+func (o *TerminateDisruptionOK) IsServerError() bool {
+	return false
+}
+
+// IsCode returns true when this terminate disruption o k response a status code equal to that given
+func (o *TerminateDisruptionOK) IsCode(code int) bool {
+	return code == 200
+}
+
+// Code gets the status code for the terminate disruption o k response
+func (o *TerminateDisruptionOK) Code() int {
+	return 200
+}
+
+func (o *TerminateDisruptionOK) Error() string {
+	return fmt.Sprintf("[POST /terminate][%d] terminateDisruptionOK", 200)
+}
+
+func (o *TerminateDisruptionOK) String() string {
+	return fmt.Sprintf("[POST /terminate][%d] terminateDisruptionOK", 200)
+}
+
+func (o *TerminateDisruptionOK) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	return nil
+}
+
+// NewTerminateDisruptionDefault creates a TerminateDisruptionDefault with default headers values
+func NewTerminateDisruptionDefault(code int) *TerminateDisruptionDefault {
+	return &TerminateDisruptionDefault{
+		_statusCode: code,
+	}
+}
+
+/*
+TerminateDisruptionDefault describes a response with status code -1, with default header values.
+
+Unexpected error
+*/
+type TerminateDisruptionDefault struct {
+	_statusCode int
+
+	Payload appmgr.Error
+}
+
+// IsSuccess returns true when this terminate disruption default response has a 2xx status code
+func (o *TerminateDisruptionDefault) IsSuccess() bool {
+	return o._statusCode/100 == 2
+}
+
+// IsRedirect returns true when this terminate disruption default response has a 3xx status code
+func (o *TerminateDisruptionDefault) IsRedirect() bool {
+	return o._statusCode/100 == 3
+}
+
+// IsClientError returns true when this terminate disruption default response has a 4xx status code
+func (o *TerminateDisruptionDefault) IsClientError() bool {
+	return o._statusCode/100 == 4
+}
+
+// IsServerError returns true when this terminate disruption default response has a 5xx status code
+func (o *TerminateDisruptionDefault) IsServerError() bool {
+	return o._statusCode/100 == 5
+}
+
+// IsCode returns true when this terminate disruption default response a status code equal to that given
+func (o *TerminateDisruptionDefault) IsCode(code int) bool {
+	return o._statusCode == code
+}
+
+// Code gets the status code for the terminate disruption default response
+func (o *TerminateDisruptionDefault) Code() int {
+	return o._statusCode
+}
+
+func (o *TerminateDisruptionDefault) Error() string {
+	payload, _ := json.Marshal(o.Payload)
+	return fmt.Sprintf("[POST /terminate][%d] terminateDisruption default %s", o._statusCode, payload)
+}
+
+func (o *TerminateDisruptionDefault) String() string {
+	payload, _ := json.Marshal(o.Payload)
+	return fmt.Sprintf("[POST /terminate][%d] terminateDisruption default %s", o._statusCode, payload)
+}
+
+func (o *TerminateDisruptionDefault) GetPayload() appmgr.Error {
+	return o.Payload
+}
+
+func (o *TerminateDisruptionDefault) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	// response payload
+	if err := consumer.Consume(response.Body(), &o.Payload); err != nil && !stderrors.Is(err, io.EOF) {
+		return err
+	}
+
+	return nil
+}
